add shortcut buttons for chats & friends to title screen & game menu